# litestar-ter

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Justfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml
migrations/: 01_initial.sql
src/: app.py  cli.py  helpers.py  repository.py  test_app.py
static/: style.css  tailwind.css
templates/: 404.html  500.html  base.html  debug_exception.html.jinja2  login.html  secure.html  users_list.html
